--- a/supportsystem/pom.xml
+++ b/supportsystem/pom.xml
@@ -20,12 +20,11 @@
 	</properties>
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-ehcache -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+		
 		<dependency>
 			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
@@ -42,24 +41,12 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<!-- OAuth Start -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-client</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>jquery</artifactId>
-			<version>3.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap</artifactId>
-			<version>4.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>webjars-locator-core</artifactId>
-		</dependency>
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-oauth2-client</artifactId> 
+			</dependency> <dependency> <groupId>org.webjars</groupId> <artifactId>jquery</artifactId> 
+			<version>3.4.1</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
+			<artifactId>bootstrap</artifactId> <version>4.3.1</version> </dependency> 
+			<dependency> <groupId>org.webjars</groupId> <artifactId>webjars-locator-core</artifactId> 
+			</dependency> -->
 		<!-- OAuth END -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
